# mailing2fast-fastapi

./: MANIFEST.in  README.md  check_config.py  pyproject.toml
docs/: env.example
examples/: async_queue.py  basic_usage.py  fastapi_integration.py
src/mailing2fast_fastapi/: __init__.py  __version__.py  dependencies.py  models.py  queue.py  sender.py  settings.py  worker.py
tests/: test_sender.py
